--- a/environment.yml
+++ b/environment.yml
@@ -13,6 +13,7 @@ dependencies:
   - accelerate ==0.32.1
   - sentencepiece ==0.2.0
   - scikit-learn
+  - pillow
   - requests
   - ipython
   - ruff
