--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,13 @@ x-base_inference_service: &base_inference_service
       --model-config-name=${TRITON_INERENCE_SERVER_MODEL_CONFIG_NAME:-"config"} \
       --load-model=embed_image \
       --load-model=siglip_vision \
+      --load-model=siglip_vision_process \
+      --load-model=siglip_vision_model \
       --log-verbose=1 \
       --log-format=ISO8601 \
       --log-info=true \
       --http-header-forward-pattern=".*" \
-      --exit-on-error=false
+      --exit-on-error=true
   environment:
     - PYTHONNOUSERSITE=True
     - PYTHONDONTWRITEBYTECODE=1
